# FEM

./: .gitignore  README.md  app.py  packages.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: cantilever_beam.json  hollow_section.json  l_bracket.json
fem/: __init__.py  materials.py  mesh.py  mesh_gen.py  postprocess.py  solver.py  solver_1d.py  solver_2d.py
tests/: __init__.py  test_mesh_gen.py  test_postprocess.py  test_solver.py
